--- a/index.html
+++ b/index.html
@@ -15,48 +15,11 @@
             background-color: #fff5e6;
             color: #333;
             flex-direction: column;
-        }
-        .sidebar {
-            width: 250px;
-            background: #ff9800;
-            color: white;
-            padding: 20px;
+            justify-content: center;
+            text-align: center;
         }
         .content {
-            flex-grow: 1;
             padding: 20px;
-            text-align: center;
-        }
-        .canvas-container {
-            text-align: center;
-        }
-        #map {
-            height: 300px;
-            width: 100%;
-            margin-top: 20px;
-            border-radius: 10px;
-        }
-        .dark-mode {
-            background-color: black !important;
-            color: white !important;
-        }
-        .gothic-mode {
-            font-family: 'Old English Text MT', cursive;
-            background-color: black !important;
-            color: white !important;
-        }
-        .gallery {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 10px;
-            justify-content: center;
-            margin-top: 20px;
-        }
-        .gallery img {
-            width: 150px;
-            height: 150px;
-            object-fit: cover;
-            border-radius: 10px;
         }
         #seaCanvas {
             position: fixed;
@@ -65,51 +28,77 @@
             height: 150px;
             background: #87CEFA;
         }
+        .bio-text {
+            font-size: 1.5rem;
+            margin-top: 20px;
+        }
+        #meme-container {
+            margin-top: 20px;
+        }
+        #meme-image {
+            max-width: 100%;
+            height: auto;
+            margin-bottom: 10px;
+        }
+        #quote-text {
+            font-size: 1.2rem;
+            font-style: italic;
+        }
+        #meme-button {
+            margin-top: 10px;
+        }
+        .input-container {
+            margin-top: 15px;
+        }
     </style>
 </head>
 <body>
     <div class="content">
         <h1>Welcome to My GitHub Page</h1>
         <img src="assets/00000000000000.PNG" alt="Salutation Image" style="width:300px; border-radius:15px;">
-        <div id="p5-canvas"></div>
-        <div id="map"></div>
-        <h2>Image Gallery</h2>
-        <div class="gallery" id="imageGallery"></div>
-        <p><a href="mailto:sakayama2343@icloud.com">Email Me</a></p>
+        
+        <div class="bio-text">
+            <p>I am an interactive developer.</p>
+            <p>I study Computer Vision specialized in Python languages.</p>
+            <p>Email me at <a href="mailto:sakayama2343@icloud.com">sakayama2343@icloud.com</a> to speak about projects.</p>
+        </div>
+
         <button class="btn btn-dark" onclick="toggleDarkMode()">Toggle Dark Mode</button>
         <button class="btn btn-dark" onclick="toggleGothicMode()">Toggle Gothic Mode</button>
+
+        <div id="meme-container">
+            <h2>Generate Meme</h2>
+            <div id="quote-text">Loading quote...</div>
+            <img id="meme-image" src="" alt="Meme image">
+            <div class="input-container">
+                <label for="user-name">Your Name:</label>
+                <input type="text" id="user-name" class="form-control" placeholder="Enter your name">
+            </div>
+            <button id="meme-button" class="btn btn-primary" onclick="generateMeme()">Generate Meme</button>
+            <button id="save-button" class="btn btn-success" onclick="saveMeme()">Save Meme</button>
+        </div>
     </div>
+
     <canvas id="seaCanvas"></canvas>
+
     <script>
+        // Toggle Dark Mode
         function toggleDarkMode() {
             document.body.classList.toggle('dark-mode');
         }
+
+        // Toggle Gothic Mode
         function toggleGothicMode() {
             document.body.classList.toggle('gothic-mode');
         }
-        function initMap() {
-            if (navigator.geolocation) {
-                navigator.geolocation.getCurrentPosition(position => {
-                    const userLocation = { lat: position.coords.latitude, lng: position.coords.longitude };
-                    const map = new google.maps.Map(document.getElementById("map"), {
-                        zoom: 12,
-                        center: userLocation,
-                    });
-                    new google.maps.Marker({
-                        position: userLocation,
-                        map: map,
-                        title: "You are here!"
-                    });
-                });
-            } else {
-                document.getElementById("map").innerHTML = "Geolocation is not supported by your browser.";
-            }
-        }
+
+        // p5.js setup and draw functions
         function setup() {
             let canvas = createCanvas(windowWidth, 150);
             canvas.parent('seaCanvas');
             noFill();
         }
+
         function draw() {
             background('#87CEFA');
             stroke(255);
@@ -119,16 +108,46 @@
                 line(i, y, i, 150);
             }
         }
-        document.addEventListener("DOMContentLoaded", () => {
-            const gallery = document.getElementById("imageGallery");
-            for (let i = 11; i <= 17; i++) {
-                let img = document.createElement("img");
-                img.src = `assets/IMG_00${i}.png`;
-                img.alt = `Image ${i}`;
-                gallery.appendChild(img);
+
+        // Meme Generator Script
+        const quoteTextElement = document.getElementById("quote-text");
+        const memeImageElement = document.getElementById("meme-image");
+        const userNameInput = document.getElementById("user-name");
+
+        async function fetchQuote() {
+            const response = await fetch('https://api.quotable.io/random');
+            const data = await response.json();
+            return data.content;
+        }
+
+        async function generateMeme() {
+            const quote = await fetchQuote();
+            const userName = userNameInput.value.trim();
+            const memeText = userName ? `"${quote}" - ${userName}` : `"${quote}"`;
+
+            quoteTextElement.textContent = memeText;
+
+            const memeImageUrl = `https://api.memegen.link/images/custom/_/${encodeURIComponent(memeText)}.png?font=impact`;
+            memeImageElement.src = memeImageUrl;
+        }
+
+        // Function to save the meme to the desktop
+        function saveMeme() {
+            const memeImageUrl = memeImageElement.src;
+            if (!memeImageUrl) {
+                alert("No meme to save!");
+                return;
             }
-        });
+
+            // Create a temporary link to trigger the download
+            const a = document.createElement('a');
+            a.href = memeImageUrl;
+            a.download = 'generated_meme.png';
+            a.click();
+        }
+
+        // Generate initial meme on page load
+        generateMeme();
     </script>
 </body>
 </html>
-
