--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
 <body>
     <div class="content">
         <h1>Welcome to My GitHub Page</h1>
-        <img src="assets/00000000000000.PNG" alt="Salutation Image" style="width:300px; border-radius:15px;">
+        <img src="00000000000000.PNG" alt="Salutation Image" style="width:300px; border-radius:15px;">
         
         <div class="bio-text">
             <p>I am an interactive developer.</p>
             <p>I study Computer Vision specialized in Python languages.</p>
-            <p>Email me at <a href="mailto:sakayama2343@icloud.com">sakayama2343@icloud.com</a> to speak about projects.</p>
+            <p>Email me at <a href="mailto:sakayama666@icloud.com">sakayama2343@icloud.com</a> to speak about projects.</p>
         </div>
 
         <button class="btn btn-dark" onclick="toggleDarkMode()">Toggle Dark Mode</button>
