--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My GitHub Page</title>
+    <title>Interactive Developer Santiago</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.6.0/p5.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_GOOGLE_MAPS_API_KEY&callback=initMap" async defer></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css">
     <style>
         body {
@@ -15,11 +14,24 @@
             background-color: #fff5e6;
             color: #333;
             flex-direction: column;
-            justify-content: center;
-            text-align: center;
+            text-align: left;
+        }
+        .sidebar {
+            width: 250px;
+            background: #ff9800;
+            color: white;
+            padding: 20px;
         }
         .content {
+            flex-grow: 1;
             padding: 20px;
+        }
+        .meme-generator {
+            margin-top: 20px;
+        }
+        .meme-image {
+            max-width: 100%;
+            border-radius: 15px;
         }
         #seaCanvas {
             position: fixed;
@@ -28,69 +40,127 @@
             height: 150px;
             background: #87CEFA;
         }
-        .bio-text {
-            font-size: 1.5rem;
-            margin-top: 20px;
+        .fibonacci {
+            margin-bottom: 1.618em; /* Fibonacci-based spacing */
         }
-        #meme-container {
-            margin-top: 20px;
+        .dark-mode {
+            background-color: #333;
+            color: #fff;
         }
-        #meme-image {
-            max-width: 100%;
-            height: auto;
-            margin-bottom: 10px;
+        .gothic-mode {
+            font-family: 'Garamond', serif;
+            background-color: #444;
+            color: #fff;
         }
-        #quote-text {
-            font-size: 1.2rem;
-            font-style: italic;
+        .clean-mode {
+            background-color: #ffffff;
+            color: #000;
         }
-        #meme-button {
-            margin-top: 10px;
+        .bauhaus-mode {
+            font-family: 'Helvetica', sans-serif;
+            background-color: #E0E0E0;
+            color: #333;
         }
-        .input-container {
-            margin-top: 15px;
+        .unicorn-pink-mode {
+            background-color: #F8B8D1;
+            color: #900C3F;
         }
     </style>
 </head>
 <body>
     <div class="content">
-        <h1>Welcome to My GitHub Page</h1>
-        <img src="00000000000000.PNG" alt="Salutation Image" style="width:300px; border-radius:15px;">
+        <h1>Interactive Developer Santiago</h1>
+        <img src="assets/00000000000000.PNG" alt="Salutation Image" style="width:300px; border-radius:15px;">
+        <p>Projects on Computer Vision and Text-Based Apps.</p>
+        <p>Certified in C++, Swift, and Objective-C.</p>
         
-        <div class="bio-text">
-            <p>I am an interactive developer.</p>
-            <p>I study Computer Vision specialized in Python languages.</p>
-            <p>Email me at <a href="mailto:sakayama666@icloud.com">sakayama2343@icloud.com</a> to speak about projects.</p>
+        <p><a href="mailto:sakayama2343@icloud.com">Email Me</a></p>
+
+        <div class="meme-generator fibonacci">
+            <h3>Generate Meme</h3>
+            <button class="btn btn-primary" id="generateQuote">Get Quote</button>
+            <input type="text" id="fileName" placeholder="Enter meme name" class="form-control my-2">
+            <button class="btn btn-success" id="saveMeme">Save to Desktop</button>
+            <div id="quoteContainer" class="my-3">
+                <img id="memeImage" class="meme-image" src="https://via.placeholder.com/500x300?text=Choose+a+Background+Image" alt="Meme Image">
+                <p id="quoteText"></p>
+            </div>
         </div>
 
         <button class="btn btn-dark" onclick="toggleDarkMode()">Toggle Dark Mode</button>
         <button class="btn btn-dark" onclick="toggleGothicMode()">Toggle Gothic Mode</button>
-
-        <div id="meme-container">
-            <h2>Generate Meme</h2>
-            <div id="quote-text">Loading quote...</div>
-            <img id="meme-image" src="" alt="Meme image">
-            <div class="input-container">
-                <label for="user-name">Your Name:</label>
-                <input type="text" id="user-name" class="form-control" placeholder="Enter your name">
-            </div>
-            <button id="meme-button" class="btn btn-primary" onclick="generateMeme()">Generate Meme</button>
-            <button id="save-button" class="btn btn-success" onclick="saveMeme()">Save Meme</button>
-        </div>
+        <button class="btn btn-dark" onclick="toggleCleanMode()">Toggle Clean Mode</button>
+        <button class="btn btn-dark" onclick="toggleBauhausMode()">Toggle Bauhaus Mode</button>
+        <button class="btn btn-dark" onclick="toggleUnicornPinkMode()">Toggle Unicorn Pink Mode</button>
     </div>
 
     <canvas id="seaCanvas"></canvas>
 
     <script>
-        // Toggle Dark Mode
+        const memeImage = document.getElementById("memeImage");
+        const quoteText = document.getElementById("quoteText");
+
+        // Function to toggle Dark Mode
         function toggleDarkMode() {
             document.body.classList.toggle('dark-mode');
         }
 
-        // Toggle Gothic Mode
+        // Function to toggle Gothic Mode
         function toggleGothicMode() {
             document.body.classList.toggle('gothic-mode');
         }
+
+        // Function to toggle Clean Mode
+        function toggleCleanMode() {
+            document.body.classList.toggle('clean-mode');
+        }
+
+        // Function to toggle Bauhaus Mode
+        function toggleBauhausMode() {
+            document.body.classList.toggle('bauhaus-mode');
+        }
+
+        // Function to toggle Unicorn Pink Mode
+        function toggleUnicornPinkMode() {
+            document.body.classList.toggle('unicorn-pink-mode');
+        }
+
+        // Function to generate meme with quote and image
+        async function generateMeme() {
+            const quote = await getBookQuote();
+            quoteText.innerText = quote;
+            memeImage.src = "https://via.placeholder.com/500x300?text=Sample+Meme+Image";
+        }
+
+        // Function to get a random quote from a public API
+        async function getBookQuote() {
+            try {
+                const response = await fetch('https://api.quotable.io/random?tags=books');
+                const data = await response.json();
+                return data.content;
+            } catch (error) {
+                console.error("Error fetching quote:", error);
+                return "Sorry, unable to fetch a quote at the moment.";
+            }
+        }
+
+        // Event Listener for the "Get Quote" button
+        document.getElementById("generateQuote").addEventListener("click", generateMeme);
+
+        // Save meme to desktop
+        document.getElementById("saveMeme").addEventListener("click", () => {
+            const fileName = document.getElementById("fileName").value || 'meme';
+            const canvas = document.createElement('canvas');
+            const ctx = canvas.getContext('2d');
+            canvas.width = memeImage.width;
+            canvas.height = memeImage.height;
+            ctx.drawImage(memeImage, 0, 0);
+            const dataUrl = canvas.toDataURL('image/png');
+            const a = document.createElement('a');
+            a.href = dataUrl;
+            a.download = `${fileName}.png`;
+            a.click();
+        });
 
         // p5.js setup and draw functions
         function setup() {
@@ -108,46 +178,6 @@
                 line(i, y, i, 150);
             }
         }
-
-        // Meme Generator Script
-        const quoteTextElement = document.getElementById("quote-text");
-        const memeImageElement = document.getElementById("meme-image");
-        const userNameInput = document.getElementById("user-name");
-
-        async function fetchQuote() {
-            const response = await fetch('https://api.quotable.io/random');
-            const data = await response.json();
-            return data.content;
-        }
-
-        async function generateMeme() {
-            const quote = await fetchQuote();
-            const userName = userNameInput.value.trim();
-            const memeText = userName ? `"${quote}" - ${userName}` : `"${quote}"`;
-
-            quoteTextElement.textContent = memeText;
-
-            const memeImageUrl = `https://api.memegen.link/images/custom/_/${encodeURIComponent(memeText)}.png?font=impact`;
-            memeImageElement.src = memeImageUrl;
-        }
-
-        // Function to save the meme to the desktop
-        function saveMeme() {
-            const memeImageUrl = memeImageElement.src;
-            if (!memeImageUrl) {
-                alert("No meme to save!");
-                return;
-            }
-
-            // Create a temporary link to trigger the download
-            const a = document.createElement('a');
-            a.href = memeImageUrl;
-            a.download = 'generated_meme.png';
-            a.click();
-        }
-
-        // Generate initial meme on page load
-        generateMeme();
     </script>
 </body>
 </html>
